--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main class="main-content">
         <section class="Lifestyle" id="lifestyle">
-            <img src="img/Снимок 1.png" alt="Lifestyle">
+            <img src="img/1 (1).png "alt="Lifestyle">
             <p>
                 Lifestyle
             </p>
@@ -50,7 +50,7 @@
         </section>
         <p>
             <section class="Lifestyle">
-                <img src="img/Снимок 2.png" alt="Lifestyle ">
+                <img src="img/1 (2).png" alt="Lifestyle ">
         </p>
         <p>
             Lifestyle
@@ -70,7 +70,7 @@
 
         <section class="photodiary">
             <p>
-                <img src="img/Снимок 3.png" alt="photodiary ">
+                <img src="img/1 (3).png" alt="photodiary ">
             </p>
             <p>Photodiary</p>
             <h2>American dream</h2>
@@ -85,7 +85,7 @@
 
         <section class="photodiary " id="photodiary">
             <p>
-                <img src="img/Снимок 4.png" alt="photodiary ">
+                <img src="img/1 (4).png" alt="photodiary ">
             </p>
             <p>Photodiary</p>
             <h2>A day exploring the Alps</h2>
